--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -67,6 +67,7 @@
       }
       button:focus-visible {
         outline: 2px solid blueviolet;
+        background-color:yellow;
       }
     }
   }
