--- a/src/sass/_season.scss
+++ b/src/sass/_season.scss
@@ -1,33 +1,79 @@
+@import "./mixin";
+
 //시즌 컨테이너
 .season-container{
   background: $season-bg-color;
   color: $season-text-color;
-}
-.season{
-  padding: 83px 919px 120px 119px;
-  text-align: center;
-  position: relative;
-}
-.season__beverage-list{
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.season__description-text1,
-.season__description-text2{
-  font-size: 4rem;
-}
-.season__description-text3,
-.season__description-text4{
-  font-size: 9rem;
-  font-weight: 700;
-  color: $season-text-color2; 
-}
-.season__description-text5{
-  font-size: 2.8rem;
-}
-.season__more{
-  font-style: 1.6rem;
-  font-weight: 700;
-  color: $season-text-color2; 
+
+  //음료 소개 단락 공통
+  [class^="season__description-text"]{
+    display: block;
+  }
+
+  .season{
+    padding: 83px 919px 120px 119px;
+    text-align: center;
+    position: relative;    
+
+    //음료 소개 단락
+    &__description{
+      border-bottom: 1px solid $season-text-color;
+      padding-bottom: 15px;
+      line-height: 1;
+
+      &-text1,
+      &-text2{
+        font-size: 4rem;
+        letter-spacing: .1em;
+      }
+      &-text2{
+        position: relative;
+        margin-top: 5px;
+        @include flexbox($ma:space-between);
+        
+        &::before,
+        &::after{
+          content: "";
+          display: block;
+          width: 160px;
+          height: 1px;
+          background-color: currentColor;
+        }
+      }
+      &-text3,
+      &-text4{
+        font-size: 9rem;
+        font-weight: 700;
+        color: $season-text-color2; 
+        letter-spacing: .07em;
+      }
+      &-text1,
+      &-text3,
+      &-text4{
+        text-transform: uppercase;
+      }
+      &-text5{
+        margin: 8px 0;
+        font-size: 2.8rem;
+      }
+    }
+
+    //음료 이미지
+    &__beverage-list{
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+
+    //음료 정보 자세히보기 링크
+    &__more{
+      display: inline-block;
+      font-style: 1.6rem;
+      font-weight: 700;
+      color: $season-text-color2; 
+      border: 2px solid currentColor;
+      padding: 10px 25px;
+      border-radius: 3px;
+    }
+  }
 }
