--- a/src/sass/_season.scss
+++ b/src/sass/_season.scss
@@ -1,5 +1,16 @@
 @import "./mixin";
 
+//시즌 음료 애니메이션
+@keyframes bounce {
+  0%{
+    transform: translateY(-10px);
+  }
+  100%{
+    transform: translateY(0);
+    // transform: none;
+  }
+}
+
 //시즌 컨테이너
 .season-container{
   background: $season-bg-color;
@@ -13,7 +24,7 @@
   .season{
     padding: 83px 919px 120px 119px;
     text-align: center;
-    position: relative;    
+    position: relative;  
 
     //음료 소개 단락
     &__description{
@@ -59,15 +70,42 @@
     }
 
     //음료 이미지
-    &__beverage-list{
-      position: absolute;
-      right: 0;
-      top: 0;
+    &__beverage-item{
+      position: absolute;   
+
+      img{
+        // animation-name: bounce;
+        // animation-duration: 600ms;
+        // animation-iteration-count: infinite;
+        // animation-direction: alternate;
+        // animation-timing-function: ease-in-out;
+        animation: bounce 600ms infinite alternate ease-in-out;
+      }
+
+      &:nth-child(1){
+        top: 113px;
+        left: 481px;
+      }
+      &:nth-child(2){
+        top: 62px;
+        left: 709px;
+        img{
+          animation-delay: 200ms;
+        }
+      }
+      &:nth-child(3){
+        top: 188px;
+        left: 999px;
+        img{
+          animation-delay: 400ms;
+        }
+      }
     }
 
     //음료 정보 자세히보기 링크
     &__more{
       display: inline-block;
+      margin-top: 40px;
       font-style: 1.6rem;
       font-weight: 700;
       color: $season-text-color2; 
@@ -77,3 +115,4 @@
     }
   }
 }
+
