리저브 수정 및 공지사항 디자인

--- a/src/sass/_reserve.scss
+++ b/src/sass/_reserve.scss
@@ -3,7 +3,6 @@
   url(./../images/reserve-bg.jpg) no-repeat 50% 50% / cover;
 }
 .reserve{
-  background-color: darkblue;
   position: relative;
   padding: 90px 0 0 224px;
   min-height: 458px;
@@ -40,3 +39,4 @@
       stroke: #fff;
     }
   }
+}
